<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_kecerahan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ailynx.pekatala.activity.KecerahanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/label_kecerahan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pilih Jawaban"
                        android:textColor="@android:color/primary_text_light"
                        android:textStyle="bold"
                        android:layout_marginRight="8dp"
                        android:layout_centerVertical="true"
                        android:textSize="18sp"
                        />
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/info_kecerahan"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_info_accent"
                        android:layout_toRightOf="@+id/label_kecerahan"
                        />
                </RelativeLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RadioButton
                        android:id="@+id/radio_kecerahan_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_kecerahan_1"
                        />
                    <RadioButton
                        android:id="@+id/radio_kecerahan_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_kecerahan_2"
                        />
                    <RadioButton
                        android:id="@+id/radio_kecerahan_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_kecerahan_3"
                        />
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Panduan Pengukuran Kecerahan"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lipsum"
                />
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_kecerahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/logo_tombol"
        app:fabSize="normal" />
</android.support.design.widget.CoordinatorLayout>
