<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_suhu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ailynx.pekatala.activity.SuhuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="64dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_suhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="Pilih Jawaban"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/info_suhu"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_toRightOf="@+id/label_suhu"
                        android:src="@drawable/ic_info_accent"
                        android:visibility="gone" />
                </RelativeLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_suhu_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_suhu_2" />

                    <RadioButton
                        android:id="@+id/radio_suhu_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_suhu_3" />

                    <RadioButton
                        android:id="@+id/radio_suhu_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jawaban_suhu_1" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:text="Panduan Pengukuran Suhu"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="175dp"
                android:layout_height="233dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ukur_suhu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ukur_suhu" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_suhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/logo_tombol"
        app:fabSize="normal" />
</android.support.design.widget.CoordinatorLayout>
